<resources>
    <string name="app_name">Samsung Remote</string>
    <string name="tv_remote">TV Remote</string>
    <string name="string_settings_TS_LR">Touchpad-Sensitivity of Left/Right</string>
    <string name="string_settings_TS_UD">Touchpad-Sensitivity of Up/Down</string>
    <string name="string_settings_GRS">Gesture Remote Speed</string>
    <string name="string_settings_SS">Sphere Sensitivity</string>
    <string name="string_settings_TV_Region">TV/BD Model Region</string>
    <string name="string_POPUP_MENU">"POPUP
MENU"</string>
    <string name="string_BONUSVIEW">"BONUS
VIEW"</string>
    <string name="string_SOURCE">SOURCE</string>
    <string name="string_2D_3D">2D>3D</string>
    <string name="string_SHIFT">SHIFT</string>
    <string name="string_Function">Function</string>
    <string name="string_SLEEP">SLEEP</string>
    <string name="string_Full_Screen">"FULL
SCREEN"</string>
    <string name="string_QZ">.QZ</string>
    <string name="string_ABC">ABC</string>
    <string name="string_DEF">DEF</string>
    <string name="string_GHI">GHI</string>
    <string name="string_JKL">JKL</string>
    <string name="string_MNO">MNO</string>
    <string name="string_PRS">PRS</string>
    <string name="string_TUV">TUV</string>
    <string name="string_WXY">WXY</string>
    <string name="string_SYMBOLS">.,;@</string>
    <string name="string_ABC_lower">abc</string>
    <string name="string_DEF_lower">def</string>
    <string name="string_GHI_lower">ghi</string>
    <string name="string_JKL_lower">jkl</string>
    <string name="string_MNO_lower">mno</string>
    <string name="string_PRS_lower">prs</string>
    <string name="string_TUV_lower">tuv</string>
    <string name="string_WXY_lower">wxyz</string>
    <string name="string___lower">_</string>
    <string name="string_TEXT">TEXT</string>
    <string name="string_HDMI">HDMI</string>
    <string name="string_TONE">TONE</string>
    <string name="string_S_DIRECT">S.DIRECT</string>
    <string name="string_AUDIO_ASSIGN">AUDIO ASSIGN</string>
    <string name="string_V_SOUND">V-SOUND</string>
    <string name="string_MEDIA">MEDIA</string>
    <string name="string_Source">Source</string>
    <string name="string_vTuner">vTuner</string>
    <string name="string_MULTIMEDIA">MULTIMEDIA</string>
    <string name="string_SelSubt">"SELECT
SUBTITLES"</string>
    <string name="string_S_W_Level">S/W LEVEL</string>
    <string name="string_3d_sound">3D SOUND</string>
    <string name="string_3d_Sound">"3D
SOUND"</string>
    <string name="string_PL_II">PL II</string>
    <string name="string_iPod_SYNC">iPod SYNC</string>
    <string name="string_tuner_memory">"TUNER 
MEMORY"</string>
    <string name="string_mo_st">MO/ST</string>
    <string name="string_dsp">DSP</string>
    <string name="string_vertical_surround">"VERTICAL
SURROUND"</string>
    <string name="string_REPEAT">REPEAT</string>
    <string name="string_NEO6">NEO: 6</string>
    <string name="string_TV_GUIDE">"TV
GUIDE"</string>
    <string name="string_about_application_1">This application is Wi-Fi remote control of Samsung Internet@TV for 2010.</string>
    <string name="string_about_application_2">If both your phone and TV were connected to the same access point, your phone is linked with TV automatically and you can use your phone like general remote.</string>
    <string name="string_Search_Up">SEARCH</string>
    <string name="string_Audio">AUDIO</string>
    <string name="string_AD_SUBTITLE">"AD/
SUBTITLE"</string>
    <string name="string_AD">AD</string>
    <string name="string_Smart_Hub">SMART HUB</string>
    <string name="string_SmartHub">"SMART
HUB"</string>
    <string name="string_Tools">TOOLS</string>
    <string name="string_Info">INFO</string>
    <string name="string_Menu">MENU</string>
    <string name="string_Guide_UP">GUIDE</string>
    <string name="string_Demo_Play">TV Remote DEMO PLAY</string>
    <string name="string_Demo_Play_Title">DEMO PLAY</string>
    <string name="string_Demo_Play_Description">You can experience a TV Remote beforehand.</string>
    <string name="devices_not_found">Both your smartphone and TV should be connected to the same access point. Please check your network settings.</string>
    <string name="demo_notification">The remote control button configuration may be different according to the area or a model.</string>
    <string name="do_not_show_message">Do not show this message next time</string>
    <string name="string_Channel_list">Channel list</string>
    <string name="string_Search">Search</string>
    <string name="string_Internet">Internet@TV</string>
    <string name="string_INTERNET">"INTERNET
@TV"</string>
    <string name="string_Social_TV">"SOCIAL 
TV"</string>
    <string name="string_Search_All">"SEARCH 
ALL"</string>
    <string name="string_Ad_Subt">AD/SUBT.</string>
    <string name="string_Guide">Guide</string>
    <string name="string_threeD">3D</string>
    <string name="string_E_Manual">E-MANUAL</string>
    <string name="string_P_Size">P.SIZE</string>
    <string name="string_P_Mode">P.MODE</string>
    <string name="string_S_Mode">S.MODE</string>
    <string name="string_D">D</string>
    <string name="string_Subt">SUBT.</string>
    <string name="string_Media_P">MEDIA.P</string>
    <string name="string_Content">Content</string>
    <string name="string_Content_UP">CONTENT</string>
    <string name="string_CONTENT">CONTENT</string>
    <string name="string_CH_LIST">"CH
List"</string>
    <string name="string_CH_LIST_1">CH LIST</string>
    <string name="string_Mute">Mute</string>
    <string name="string_HotApps">HOT APPS</string>
    <string name="string_MTS">MTS</string>
    <string name="string_Fav_Ch">FAV.CH</string>
    <string name="string_CC">CC</string>
    <string name="string_YAHOO">YAHOO!</string>
    <string name="string_TV_SNS">TV SNS</string>
    <string name="string_SRS">SRS</string>
    <string name="string_Dual">"I-II
DUAL"</string>
    <string name="string_Devices">Devices</string>
    <string name="string_TV_Remote">TV Remote</string>
    <string name="string_Gesture_Remote">Gesture Remote</string>
    <string name="string_Keyboard">Keyboard</string>
    <string name="string_Game_Remote">Game Control</string>
    <string name="string_Manual">Help</string>
    <string name="string_Settings">Settings</string>
    <string name="string_Return">RETURN</string>
    <string name="string_Exit">EXIT</string>
    <string name="string_Enter">ENTER</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_0">0</string>
    <string name="string_minus">-</string>
    <string name="string_preCH">PRE-CH</string>
    <string name="string_supported_models_1">All SAMSUNG TVs working with Internet@TV 2010</string>
    <string name="string_supported_models_2">LCD 650 SERIES or Higher LED 6500 SERIES or Higher PDP 6500 SERIES or Higher</string>
    <string name="string_TTX">TTX</string>
    <string name="string_TTX_MIX">TTX/MIX</string>
    <string name="string_Cancel">CANCEL</string>
    <string name="string_Reveal">REVEAL</string>
    <string name="string_Hold">HOLD</string>
    <string name="string_Double">"DOUBLE
SIZE"</string>
    <string name="string_Size">SIZE</string>
    <string name="string_Sub">"SUB
PAGE"</string>
    <string name="string_Page">PAGE</string>
    <string name="string_Index">INDEX</string>
    <string name="string_Flof_List">FLOF LIST</string>
    <string name="string_Store">STORE</string>
    <string name="string_Page_Down">"PAGE
DOWN"</string>
    <string name="string_Down">DOWN</string>
    <string name="string_Page_Up">PAGE UP</string>
    <string name="string_Message_Auth_Fail">Authentication Failed</string>
    <string name="string_Message_Disconnect">Disconnected..</string>
    <string name="string_Message_Network_Fail">Network Connection Failure</string>
    <string name="string_Message_Retry">Retry</string>
    <string name="string_Message_Cancel">Cancel</string>
    <string name="string_Message_Connecting">Connecting..</string>
    <string name="string_Message_Select_Allow">To use this application, you should select \"Allow\" on the TV Screen</string>
    <string name="pairing_dialog_message">To use Bluetooth power on function device pairing is needed. Do you want to pairing this device?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_try_again">Please try again</string>
    <string name="it_takes_30_seconds">It takes 20-30 seconds</string>
    <string name="check_the_network">Please check the network and AP setup</string>
    <string name="check_bluetooth_settings">"Please check the Mobile Bluetooth settings.

Mobile Bluetooth should be turned on and paired with the device."</string>
    <string name="go_settings">Go settings</string>
    <string name="Normal">Normal</string>
    <string name="Smart">Smart</string>
    <string name="string_About_Application">About Application</string>
    <string name="string_Supported_Models">Supported Models</string>
    <string name="string_Brief_Description">Brief Description</string>
    <string name="string_Brief_TvRemote_1">The basic remote control operations are available.</string>
    <string name="string_Brief_TvRemote_2">With dragging gesture like up/down/left/right, Direction or CH/VOL can be adjusted whatever background is.</string>
    <string name="string_Brief_Gesture_Remote_title">Gesture Remote</string>
    <string name="string_Brief_Gesture_Remote_text">CH/VOL can be adjusted with touching the screen and tilting the device.</string>
    <string name="string_Brief_KeyBoard">If you need typing like when you use Internet@TV, You can input letters readily by using this controller.</string>
    <string name="string_Brief_GameRemote">This controller gives you comfortable UI for games at Internet@TV.</string>
    <string name="string_Brief_Description_Page_title_2" />
    <string name="string_Manual_Home">&lt;html>&lt;head>&lt;/head>&lt;body style=text-align:justify;font-size:14px;color:white;background-color:black;>Have your Samsung devices(TV, BD) connected to the same wireless router? Samsung App has features to control them easily.&lt;/body>&lt;/html></string>
    <string name="string_Bluetooth_Power_on">Bluetooth Power On</string>
    <string name="string_Bluetooth_Power_on_btn">Bluetooth Power on Supported Models</string>
    <string name="string_Bluetooth_Power_on_top_text">&lt;html>&lt;head>&lt;/head>&lt;body style=text-align:justify;font-size:14px;color:white;background-color:black;>You can turn on your TV using bluetooth (available for certain TV and mobile devices only).&lt;/body>&lt;/html></string>
    <string name="string_Bluetooth_Power_on_right_text">Important: To use this function, pair your device to the TV and enable bluetooth in your device.</string>
    <string name="string_manual_allshare">Enjoy content from other devices on your TV(AllShare support models only).</string>
    <string name="string_manual_settings">Enable optimized control for TV and BD by adjusting gesture sensitivity. High settings means high sensitivity to gesture. Also, select region to display full remote screen right for your TV/BD model.</string>
    <string name="string_Ok">OK</string>
    <string name="string_Auto_Discovery">Auto Discovery</string>
</resources>