<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:id="@id/demo_notification" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:visibility="visible" android:layout_width="460.0px" android:layout_height="400.0px" android:minWidth="460.0px" android:minHeight="400.0px">
        <TextView android:textSize="26.0px" android:textColor="#ffffffff" android:gravity="center" android:id="@id/demo_notification_text" android:visibility="visible" android:layout_width="440.0px" android:layout_height="wrap_content" android:minHeight="250.0px" android:text="@string/demo_notification" />
        <CheckBox android:gravity="center" android:id="@id/demo_notification_checkbox" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/do_not_show_message" />
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="26.0px" android:id="@id/demo_notification_button" android:background="#ff66bb66" android:visibility="visible" android:layout_width="212.0px" android:layout_height="78.0px" android:text="@string/string_Ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
